@@ -70,7 +70,7 @@ class FsShellPermissions {
                                 new FsPermission((short)newperms));
         } catch (IOException e) {
           System.err.println(getName() + ": changing permissions of '" + 
-                             file.getPath() + "':" + e.getMessage());
+                             file.getPath() + "':" + e.getMessage().split("\n")[0]);
         }
       }
     }
@@ -111,7 +111,7 @@ class FsShellPermissions {
       }
       if (owner == null && group == null) {
         throw new IOException("'" + ownerStr + "' does not specify " +
-                              " onwer or group.");
+                              " owner or group.");
       }
     }
 
@@ -128,7 +128,7 @@ class FsShellPermissions {
           srcFs.setOwner(file.getPath(), newOwner, newGroup);
         } catch (IOException e) {
           System.err.println(getName() + ": changing ownership of '" + 
-                             file.getPath() + "':" + e.getMessage());
+                             file.getPath() + "':" + e.getMessage().split("\n")[0]);
 
         }
       }
